--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs"
+    "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs",
+    "format": "biome format . --write",
+    "lint": "yarn run format && biome check .",
+    "lint:nofix": "biome check ."
   },
   "private": true,
   "dependencies": {
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.0.7",
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.0",
+    "@biomejs/biome": "1.8.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
