--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.7",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/entity": "^18.0.1",
+    "@ngrx/router-store": "^18.0.1",
+    "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "express": "^4.18.2",
     "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
@@ -35,6 +40,7 @@
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.0",
     "@biomejs/biome": "1.8.3",
+    "@ngrx/schematics": "^18.0.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
