--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "ng test",
     "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs",
     "format": "biome format . --write",
-    "lint": "yarn run format && biome check .",
-    "lint:nofix": "biome check ."
+    "lint": "yarn run format && ng lint --fix && biome check .",
+    "lint:nofix": "ng lint && biome check ."
   },
   "private": true,
   "dependencies": {
@@ -44,12 +44,17 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-eslint": "18.1.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-unicorn": "^54.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.0.0-alpha.38"
   }
 }
