--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "express": "^4.18.2",
+    "ngx-pipes": "^3.2.2",
     "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
