feat: 依存関係にts-patternを追加

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-pipes": "^3.2.2",
     "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
+    "ts-pattern": "^5.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
