--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ts-pattern": "^5.2.0",
     "tslib": "^2.3.0",
     "umt-common": "^1.8.2",
+    "zod": "^3.23.8",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
