--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
+
+.env
+src/environments/*
+!src/environments/set-environment.ts
