--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "angular-eslint": "18.1.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.6.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unicorn": "^54.0.0",
