--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/platform-server": "^18.1.1",
     "@angular/router": "^18.1.1",
     "@angular/ssr": "^18.1.1",
+    "@fastify/express": "^3.0.0",
     "@ngrx/effects": "^18.0.1",
     "@ngrx/entity": "^18.0.1",
     "@ngrx/router-store": "^18.0.1",
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "fastify": "^4.28.1",
     "moment": "^2.30.1",
     "ngx-moment": "^6.0.2",
     "ngx-pipes": "^3.2.2",
@@ -48,7 +50,7 @@
     "@angular/compiler-cli": "^18.1.1",
     "@biomejs/biome": "1.8.3",
     "@ngrx/schematics": "^18.0.1",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "angular-eslint": "18.1.0",
