--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/compiler-cli": "^18.1.1",
     "@biomejs/biome": "1.8.3",
     "@ngrx/schematics": "^18.0.1",
+    "@ngx-env/builder": "18.0.1",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
