build: undiciとundici-typesのバージョンを6.19.2に更新

--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2",
     "typescript-eslint": "8.0.0-alpha.38"
+  },
+  "overrides": {
+    "undici": "6.19.2",
+    "undici-types": "6.19.2"
   }
 }
