refactor: 依存関係の更新とコードのリファクタリングを実施

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "rxjs": "~7.8.0",
     "ts-pattern": "^5.2.0",
     "tslib": "^2.3.0",
-    "umt-common": "^1.8.2",
+    "umt": "^1.8.2",
     "zod": "^3.23.8",
     "zone.js": "~0.14.10"
   },
