feat: angular.jsonにanalytics設定を追加し、package.jsonにbuild:productionスクリプトを追加

--- a/angular.json
+++ b/angular.json
@@ -122,6 +122,7 @@
     "schematicCollections": [
       "@angular-eslint/schematics",
       "@ngrx/schematics"
-    ]
+    ],
+    "analytics": "d86ea36f-1d62-4201-9d9b-226e51582dd6"
   }
 }
