--- a/package.json
+++ b/package.json
@@ -15,50 +15,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.1",
-    "@angular/common": "^18.2.1",
-    "@angular/compiler": "^18.2.1",
-    "@angular/core": "^18.2.1",
-    "@angular/forms": "^18.2.1",
-    "@angular/platform-browser": "^18.2.1",
-    "@angular/platform-browser-dynamic": "^18.2.1",
-    "@angular/platform-server": "^18.2.1",
-    "@angular/router": "^18.2.1",
-    "@angular/ssr": "^18.2.1",
-    "@fastify/express": "^3.0.0",
-    "@ngrx/effects": "^18.0.2",
-    "@ngrx/entity": "^18.0.2",
-    "@ngrx/router-store": "^18.0.2",
-    "@ngrx/store": "^18.0.2",
-    "@ngrx/store-devtools": "^18.0.2",
-    "express": "^4.19.2",
-    "fastify": "^4.28.1",
-    "moment": "^2.30.1",
-    "ngx-moment": "^6.0.2",
-    "ngx-pipes": "^3.2.2",
-    "primeng": "^17.18.3",
+    "@angular/animations": "18.2.1",
+    "@angular/common": "18.2.1",
+    "@angular/compiler": "18.2.1",
+    "@angular/core": "18.2.1",
+    "@angular/forms": "18.2.1",
+    "@angular/platform-browser": "18.2.1",
+    "@angular/platform-browser-dynamic": "18.2.1",
+    "@angular/platform-server": "18.2.1",
+    "@angular/router": "18.2.1",
+    "@angular/ssr": "18.2.1",
+    "@fastify/express": "3.0.0",
+    "@ngrx/effects": "18.0.2",
+    "@ngrx/entity": "18.0.2",
+    "@ngrx/router-store": "18.0.2",
+    "@ngrx/store": "18.0.2",
+    "@ngrx/store-devtools": "18.0.2",
+    "express": "4.19.2",
+    "fastify": "4.28.1",
+    "moment": "2.30.1",
+    "ngx-moment": "6.0.2",
+    "ngx-pipes": "3.2.2",
+    "primeng": "19.1.4",
     "rxjs": "~7.8.0",
-    "ts-pattern": "^5.2.0",
-    "tslib": "^2.3.0",
-    "umt": "^1.8.2",
-    "zod": "^3.23.8",
+    "ts-pattern": "5.2.0",
+    "tslib": "2.3.0",
+    "umt": "1.8.2",
+    "zod": "3.23.8",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.1",
-    "@angular/cli": "^18.2.1",
-    "@angular/compiler-cli": "^18.2.1",
+    "@angular-devkit/build-angular": "18.2.1",
+    "@angular/cli": "18.2.1",
+    "@angular/compiler-cli": "18.2.1",
     "@biomejs/biome": "1.8.3",
-    "@ngrx/schematics": "^18.0.2",
+    "@ngrx/schematics": "18.0.2",
     "@ngx-env/builder": "18.0.1",
-    "@types/express": "^4.17.21",
+    "@types/express": "4.17.21",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "18.18.0",
     "angular-eslint": "18.1.0",
-    "dotenv": "^16.4.5",
-    "eslint": "^9.6.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-unicorn": "^54.0.0",
+    "dotenv": "16.4.5",
+    "eslint": "9.6.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-unicorn": "54.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -66,7 +66,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2",
-    "typescript-eslint": "8.0.0-alpha.38"
+    "typescript-eslint": "8.41.0"
   },
   "overrides": {
     "undici": "6.19.2",
