--- a/biome.json
+++ b/biome.json
@@ -1,14 +1,22 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "off"
+      }
+    }
+  },
   "files": {
-    "ignore": [
-      "node_modules",
-      "module",
-      "*.json",
-      "doc",
-      "coverage",
-      ".angular",
-      "dist"
+    "includes": [
+      "**",
+      "!**/node_modules",
+      "!**/module",
+      "!**/*.json",
+      "!**/doc",
+      "!**/coverage",
+      "!**/.angular",
+      "!**/dist"
     ]
   },
   "formatter": {
@@ -37,9 +45,10 @@
   },
   "linter": {
     "enabled": true,
-    "ignore": [
-      "tests",
-      ".dependency-cruiser.js"
+    "includes": [
+      "**",
+      "!**/tests",
+      "!**/.dependency-cruiser.js"
     ],
     "rules": {
       "a11y": {
@@ -52,46 +61,56 @@
       },
       "correctness": {
         "noConstantMathMinMaxClamp": "error",
+        "noSwitchDeclarations": "error",
         "noUndeclaredVariables": "warn",
         "noUnusedVariables": "warn",
         "useExhaustiveDependencies": "warn",
         "useHookAtTopLevel": "error"
       },
-      "nursery": {
-        "noDoneCallback": "error",
-        "noDuplicateElseIf": "error",
-        "noDuplicateJsonKeys": "error",
-        "noEvolvingTypes": "error",
-        "noMisplacedAssertion": "error"
+      "performance": {
+        "noNamespaceImport": "error"
       },
       "recommended": true,
       "style": {
+        "noDoneCallback": "error",
         "noImplicitBoolean": "warn",
-        "noNamespaceImport": "error",
         "noNegationElse": "error",
         "noParameterAssign": "off",
         "noParameterProperties": "off",
         "noShoutyConstants": "warn",
         "useBlockStatements": "error",
+        "useConsistentArrayType": {
+          "level": "error",
+          "options": {
+            "syntax": "shorthand"
+          }
+        },
         "useFragmentSyntax": "error",
         "useNamingConvention": {
           "level": "off",
           "options": {
-            "enumMemberCase": "CONSTANT_CASE",
+            "conventions": [
+              {
+                "formats": [
+                  "CONSTANT_CASE"
+                ],
+                "selector": {
+                  "kind": "enumMember"
+                }
+              }
+            ],
             "strictCase": true
           }
         },
-        "useShorthandArrayType": "error",
-        "useShorthandAssign": "error",
-        "useSingleCaseStatement": "error"
+        "useShorthandAssign": "error"
       },
       "suspicious": {
+        "noDuplicateElseIf": "error",
         "noEmptyBlockStatements": "error",
+        "noEvolvingTypes": "error",
+        "noMisplacedAssertion": "error",
         "noSkippedTests": "error"
       }
     }
-  },
-  "organizeImports": {
-    "enabled": false
   }
 }
