--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "test": "ng test",
     "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs",
     "format": "biome format . --write",
-    "lint": "yarn run format && ng lint --fix && biome check .",
+    "lint": "bun run format && ng lint --fix && biome check .",
     "lint:nofix": "ng lint && biome check ."
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.2.1",
-    "@angular/common": "18.2.1",
-    "@angular/compiler": "18.2.1",
-    "@angular/core": "18.2.1",
-    "@angular/forms": "18.2.1",
-    "@angular/platform-browser": "18.2.1",
-    "@angular/platform-browser-dynamic": "18.2.1",
-    "@angular/platform-server": "18.2.1",
-    "@angular/router": "18.2.1",
-    "@angular/ssr": "18.2.1",
+    "@angular/animations": "19.2.14",
+    "@angular/common": "19.2.14",
+    "@angular/compiler": "19.2.14",
+    "@angular/core": "19.2.14",
+    "@angular/forms": "19.2.14",
+    "@angular/platform-browser": "19.2.14",
+    "@angular/platform-browser-dynamic": "19.2.14",
+    "@angular/platform-server": "19.2.14",
+    "@angular/router": "19.2.14",
+    "@angular/ssr": "19.2.15",
     "@fastify/express": "3.0.0",
-    "@ngrx/effects": "18.0.2",
-    "@ngrx/entity": "18.0.2",
-    "@ngrx/router-store": "18.0.2",
-    "@ngrx/store": "18.0.2",
-    "@ngrx/store-devtools": "18.0.2",
+    "@ngrx/effects": "19.2.1",
+    "@ngrx/entity": "19.2.1",
+    "@ngrx/router-store": "19.2.1",
+    "@ngrx/store": "19.2.1",
+    "@ngrx/store-devtools": "19.2.1",
     "express": "4.19.2",
     "fastify": "4.28.1",
     "moment": "2.30.1",
@@ -42,21 +42,21 @@
     "tslib": "2.3.0",
     "umt": "1.8.2",
     "zod": "3.23.8",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.1",
-    "@angular/cli": "18.2.1",
-    "@angular/compiler-cli": "18.2.1",
-    "@biomejs/biome": "1.8.3",
-    "@ngrx/schematics": "18.0.2",
+    "@angular/build": "^19.2.15",
+    "@angular/cli": "19.2.15",
+    "@angular/compiler-cli": "19.2.14",
+    "@biomejs/biome": "2.2.2",
+    "@ngrx/schematics": "19.2.1",
     "@ngx-env/builder": "18.0.1",
     "@types/express": "4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "18.18.0",
-    "angular-eslint": "18.1.0",
+    "angular-eslint": "19.8.1",
     "dotenv": "16.4.5",
-    "eslint": "9.6.0",
+    "eslint": "^9.8.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-unicorn": "54.0.0",
     "jasmine-core": "~5.1.0",
@@ -65,8 +65,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2",
-    "typescript-eslint": "8.41.0"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.0.0"
   },
   "overrides": {
     "undici": "6.19.2",
