--- a/.gitignore
+++ b/.gitignore
@@ -36,16 +36,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+__screenshots__/
 
 # System files
 .DS_Store
 Thumbs.db
-
-# Firebase
-.firebase
-*-debug.log
-.runtimeconfig.json
-
-.env
-src/environments/*
-!src/environments/set-environment.ts
