--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs"
+    "serve:ssr:play-umt": "node dist/play-umt/server/server.mjs",
+    "lint": "ng lint"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,31 +24,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.3.12",
-    "@angular/compiler": "20.3.12",
-    "@angular/core": "20.3.12",
-    "@angular/forms": "20.3.12",
-    "@angular/platform-browser": "20.3.12",
-    "@angular/platform-server": "20.3.12",
-    "@angular/router": "20.3.12",
-    "@angular/ssr": "20.3.10",
+    "@angular/common": "21.0.3",
+    "@angular/compiler": "21.0.3",
+    "@angular/core": "21.0.3",
+    "@angular/forms": "21.0.3",
+    "@angular/platform-browser": "21.0.3",
+    "@angular/platform-server": "21.0.3",
+    "@angular/router": "21.0.3",
+    "@angular/ssr": "21.0.2",
     "express": "5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.10",
-    "@angular/cli": "20.3.10",
-    "@angular/compiler-cli": "20.3.12",
+    "@angular-eslint/builder": "21.0.1",
+    "@angular/build": "^21.0.2",
+    "@angular/cli": "21.0.2",
+    "@angular/compiler-cli": "21.0.3",
+    "@eslint/js": "^9.39.1",
     "@types/express": "5.0.5",
     "@types/jasmine": "~5.1.13",
     "@types/node": "24.10.1",
+    "angular-eslint": "21.0.1",
+    "eslint": "^9.39.1",
     "jasmine-core": "~5.12.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "8.46.4"
   }
 }
